# platform.upstream.x11proto-gesture

./: COPYING  LICENSE.MIT  Makefile.am  NOTICE  configure.ac  gestureconst.h  gestureproto.h  project.config
debian/: changelog  control  rules  x11proto-gesture-dev.install
packaging/: x11proto-gesture.spec  xorg-gestureproto.spec  xorg-x11-proto-gesture.spec
